--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Image search</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <form class="form">
+      <label>
+        Image search
+        <input type="number" name="delay" required />
+      </label>
+
+      <button type="submit">Create notification</button>
+    </form>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
