--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form class="form">
-      <label>
-        Image search
-        <input type="number" name="delay" required />
-      </label>
+    <div class="block">
+      <form class="images-form">
+        <input type="text" name="query" />
+        <button type="submit">Search</button>
+      </form>
+      <div
+        class="hero-container fb images-container"
+        style="justify-content: start"
+      ></div>
+    </div>
 
-      <button type="submit">Create notification</button>
-    </form>
-
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/pixabay-api.js"></script>
   </body>
 </html>
