--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
       <button class="images-form-button" type="submit">Search</button>
     </form>
 
+    <span class="loader"></span>
+
     <ul class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
